--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -69,7 +69,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/rect_orange100_fill_12"
+            android:background="@drawable/rect_white_fill_radius8"
+            android:backgroundTint="@color/coral400"
+            android:textColor="@color/white"
             android:gravity="center"
             android:padding="16dp"
             android:text="@string/group_list_prev_btn"
@@ -86,10 +88,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:background="@drawable/rect_orange100_fill_12"
+            android:background="@drawable/rect_white_fill_radius8"
             android:gravity="center"
             android:padding="16dp"
             android:text="@string/group_list_next_btn"
+            android:backgroundTint="@color/coral400"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
