--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -25,6 +25,7 @@
             android:id="@+id/iv_group_list_poster"
             android:layout_width="110dp"
             android:layout_height="110dp"
+            android:src="@drawable/ic_group_normal"
             android:background="@drawable/rect_orange100_fill_12"
             app:shapeAppearanceOverlay="@style/RoundBig"
             app:layout_constraintDimensionRatio="1:1"
@@ -47,7 +48,7 @@
                 android:id="@+id/rcv_group_list_filter_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_margin="3dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toTopOf="@id/tv_group_list_group_state"
@@ -60,7 +61,7 @@
                 style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 app:applyParticipable="@{group.participable}"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +88,7 @@
                 style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size12"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
                 android:ellipsize="end"
@@ -112,7 +113,7 @@
                 android:id="@+id/rcv_group_list_dog_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="@+id/view_group_list_participation"
@@ -150,7 +151,7 @@
                 style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:text="@{@string/group_group_info(group.groupLeader,group.groupLocation)}"
                 app:layout_constraintBottom_toBottomOf="parent"
