--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Base.Theme.Friendogly" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-
+        <item name="android:windowBackground">@color/white</item>
         <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
 
     </style>
