--- a/android/app/src/main/res/drawable/ic_un_check.xml
+++ b/android/app/src/main/res/drawable/ic_un_check.xml
@@ -11,7 +11,7 @@
         android:strokeLineJoin="round"
         android:strokeWidth="2"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"
+        android:strokeColor="@color/gray400"
         android:strokeLineCap="round"/>
   </group>
 </vector>
