--- a/android/app/src/main/res/drawable/sel_group_background_filter_menu.xml
+++ b/android/app/src/main/res/drawable/sel_group_background_filter_menu.xml
@@ -2,11 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/coral100" />
+            <solid android:color="@color/coral500" />
             <corners android:radius="12dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/white" />
+                android:color="@color/coral700" />
         </shape>
     </item>
     <item>
@@ -15,7 +15,7 @@
             <corners android:radius="12dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/black" />
+                android:color="@color/gray400" />
         </shape>
     </item>
 </selector>
