--- a/android/app/src/main/res/layout/fragment_group_add_detail.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_detail.xml
@@ -39,15 +39,24 @@
         <Space
             android:layout_width="wrap_content"
             android:layout_height="50dp" />
-
-        <ImageView
-            app:groupPoster="@{vm.groupPoster}"
-            onSingleClick="@{()->actionHandler.selectGroupImage()}"
-            android:id="@+id/iv_group_add_poster"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            onSingleClick="@{()->actionHandler.selectGroupImage()}"
             android:layout_gravity="center"
-            android:src="@drawable/ic_camera" />
+            android:layout_height="100dp">
+            <ImageView
+                app:groupPoster="@{vm.groupPoster}"
+                android:id="@+id/iv_group_add_poster"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/img_profile_normal" />
+            <ImageView
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@drawable/ic_user_profile_set_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Space
             android:layout_width="wrap_content"
@@ -75,7 +84,7 @@
             android:layout_height="20dp" />
 
         <TextView
-            style="@style/Theme.AppCompat.TextView.Medium.Black.Size16"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -91,8 +100,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:progressTint="@color/coral300"
-            android:thumbTint="@color/coral300"
+            android:progressTint="@color/coral500"
+            android:thumbTint="@color/coral500"
             android:max="5"
             android:progress="@{vm.groupCounter.count}"/>
     </LinearLayout>
