--- a/android/app/src/main/res/layout/item_detail_profile.xml
+++ b/android/app/src/main/res/layout/item_detail_profile.xml
@@ -13,7 +13,9 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content">
         <ImageView
+            android:src="@drawable/img_profile_normal"
             glide="@{profile.imageUrl}"
+            android:backgroundTint="@color/coral50"
             android:background="@drawable/rect_orange100_fill_12"
             app:shapeAppearanceOverlay="@style/RoundBig"
             app:layout_constraintDimensionRatio="1:1"
