--- a/android/app/src/main/res/layout/activity_register_dog.xml
+++ b/android/app/src/main/res/layout/activity_register_dog.xml
@@ -257,9 +257,8 @@
                 <RadioButton
                     android:id="@+id/rb_male"
                     style="@style/Theme.AppCompat.TextView.Regular.Black.Size12"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_marginHorizontal="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/sel_regsiterdog_color_dog_option"
                     android:button="@null"
@@ -270,7 +269,7 @@
                 <RadioButton
                     android:id="@+id/rb_female"
                     style="@style/Theme.AppCompat.TextView.Regular.Black.Size12"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_marginHorizontal="5dp"
                     android:layout_weight="1"
