refactor: ActionHandler 재활용을 위한 분리

--- a/android/app/src/main/res/layout/include_add_dog_menu.xml
+++ b/android/app/src/main/res/layout/include_add_dog_menu.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="actionHandler"
-            type="com.happy.friendogly.presentation.ui.group.add.GroupAddActionHandler" />
+            type="com.happy.friendogly.presentation.ui.group.filter.GroupFilterActionHandler" />
         <variable
             name="filterName"
             type="java.lang.String" />
