feat: 데이터 바인딩

--- a/android/app/src/main/res/layout/bottom_sheet_filter_size_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_filter_size_selector.xml
@@ -3,9 +3,8 @@
 
     <data>
         <variable
-            name="handler"
-            type="com.happy.friendogly.presentation.ui.group.filter.GroupFilterItemActionHandler" />
-
+            name="vm"
+            type="com.happy.friendogly.presentation.ui.group.filter.GroupFilterViewModel" />
     </data>
 
     <LinearLayout
