feat: 스위치 on/off에 따른 권한 검사 구현

--- a/android/app/src/main/res/layout/layout_chat_drawer.xml
+++ b/android/app/src/main/res/layout/layout_chat_drawer.xml
@@ -32,6 +32,7 @@
 
     <com.google.android.material.materialswitch.MaterialSwitch
         style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
+        android:id="@+id/switch_chat_setting_alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
