--- a/android/app/src/main/res/layout/bottom_sheet_gender_filter_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_gender_filter_selector.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <import type="com.happy.friendogly.presentation.ui.group.model.groupfilter.GroupFilter" />
+
         <variable
             name="vm"
             type="com.happy.friendogly.presentation.ui.group.filter.GroupFilterViewModel" />
@@ -9,7 +13,87 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
 
+        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/group_add_dog_size_title" />
+
+            <Space
+                android:layout_width="5dp"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_alart" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:alignContent="stretch"
+            app:alignItems="stretch"
+            app:flexWrap="wrap">
+
+            <include
+                layout="@layout/include_add_dog_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                app:checkState="@{false}"
+                app:actionHandler="@{vm}"
+                app:filterName="@{GroupFilter.SMALL_DOG_NAME}" />
+
+            <include
+                layout="@layout/include_add_dog_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                app:checkState="@{false}"
+                app:actionHandler="@{vm}"
+                app:filterName="@{GroupFilter.MEDIUM_DOG_NAME}" />
+
+            <include
+                layout="@layout/include_add_dog_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                app:checkState="@{false}"
+                app:actionHandler="@{vm}"
+                app:filterName="@{GroupFilter.BIG_DOG_NAME}" />
+        </com.google.android.flexbox.FlexboxLayout>
+
+        <TextView
+            onSingleClick="@{() -> vm.selectFilters()}"
+            android:id="@+id/tv_group_select_commit"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginVertical="24dp"
+            android:background="@drawable/rect_coral04_fill_16"
+            android:backgroundTint="@color/coral400"
+            android:gravity="center"
+            android:text="@string/group_select_commit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list" />
     </LinearLayout>
 </layout>
