--- a/android/app/src/main/res/layout/fragment_group_add_filter.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_filter.xml
@@ -91,6 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.SMALL_DOG_NAME}" />
 
             <include
@@ -99,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.MEDIUM_DOG_NAME}" />
 
             <include
@@ -107,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.BIG_DOG_NAME}" />
         </com.google.android.flexbox.FlexboxLayout>
 
@@ -151,6 +154,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.MALE_NAME}" />
 
             <include
@@ -160,6 +164,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.NEUTRALIZING_FEMALE_NAME}" />
 
             <include
@@ -169,6 +174,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.FEMALE_NAME}" />
 
             <include
@@ -178,6 +184,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
+                app:checkState="@{true}"
                 app:filterName="@{GroupFilter.NEUTRALIZING_MALE_NAME}" />
         </com.google.android.flexbox.FlexboxLayout>
     </LinearLayout>
