--- a/android/app/src/main/res/layout/include_add_dog_menu.xml
+++ b/android/app/src/main/res/layout/include_add_dog_menu.xml
@@ -3,9 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="checkState"
+            type="java.lang.Boolean" />
+
         <variable
             name="actionHandler"
             type="com.happy.friendogly.presentation.ui.group.filter.GroupFilterItemActionHandler" />
+
         <variable
             name="filterName"
             type="java.lang.String" />
@@ -13,12 +19,12 @@
 
     <CheckBox
         android:id="@+id/checkbox_group_filter"
-        android:onCheckedChanged="@{(buttonView, isChecked) -> actionHandler.selectGroupFilter(filterName, isChecked)}"
         style="@style/group_add_custom_checkbox"
-        android:checked="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:checked="@{checkState}"
         android:minHeight="0dp"
+        android:onCheckedChanged="@{(buttonView, isChecked) -> actionHandler.selectGroupFilter(filterName, isChecked)}"
         android:text="@{filterName}"
         tools:text="대형견" />
 </layout>
