--- a/android/app/src/main/res/layout/item_select_filter.xml
+++ b/android/app/src/main/res/layout/item_select_filter.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
+        android:layout_marginVertical="5dp"
         android:background="@drawable/rect_orange100_fill_12"
         android:paddingHorizontal="8dp"
         android:paddingVertical="3dp">
