--- a/android/app/src/main/res/layout/bottom_sheet_gender_filter_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_gender_filter_selector.xml
@@ -11,6 +11,7 @@
             type="com.happy.friendogly.presentation.ui.group.filter.GroupFilterViewModel" />
     </data>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,27 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <LinearLayout
+        <TextView
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/group_add_dog_size_title" />
-
-            <Space
-                android:layout_width="5dp"
-                android:layout_height="wrap_content" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_alart" />
-        </LinearLayout>
+            android:text="@string/group_add_dog_gender_title" />
 
         <Space
             android:layout_width="wrap_content"
@@ -55,31 +40,44 @@
             app:flexWrap="wrap">
 
             <include
+                android:id="@+id/include_filter_male"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                app:checkState="@{false}"
+                android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
-                app:filterName="@{GroupFilter.SMALL_DOG_NAME}" />
+                app:filterName="@{GroupFilter.MALE_NAME}" />
 
             <include
+                android:id="@+id/include_filter_neutralizing_female"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                app:checkState="@{false}"
+                android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
-                app:filterName="@{GroupFilter.MEDIUM_DOG_NAME}" />
+                app:filterName="@{GroupFilter.NEUTRALIZING_FEMALE_NAME}" />
 
             <include
+                android:id="@+id/include_filter_female"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                app:checkState="@{false}"
+                android:layout_marginBottom="5dp"
                 app:actionHandler="@{vm}"
-                app:filterName="@{GroupFilter.BIG_DOG_NAME}" />
+                app:filterName="@{GroupFilter.FEMALE_NAME}" />
+
+            <include
+                android:id="@+id/include_filter_neutralizing_male"
+                layout="@layout/include_add_dog_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                app:actionHandler="@{vm}"
+                app:filterName="@{GroupFilter.NEUTRALIZING_MALE_NAME}" />
         </com.google.android.flexbox.FlexboxLayout>
 
         <TextView
