--- a/android/app/src/main/res/layout/item_select_filter.xml
+++ b/android/app/src/main/res/layout/item_select_filter.xml
@@ -15,6 +15,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        onSingleClick="@{()->actionHandler.removeFilter(groupFilter)}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
@@ -36,8 +37,8 @@
             tools:text="중형견" />
 
         <ImageView
-            android:layout_width="12dp"
-            android:layout_height="12dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:backgroundTint="@color/white"
             android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="parent"
