refactor: modify 리팩토링

--- a/android/app/src/main/res/layout/bottom_sheet_group_menu.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_group_menu.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="vm"
-            type="com.happy.friendogly.presentation.ui.group.modify.GroupModifyViewModel" />
+            type="com.happy.friendogly.presentation.ui.group.menu.GroupMenuViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
