--- a/android/app/src/main/res/drawable/rect_coral300_fill_20.xml
+++ b/android/app/src/main/res/drawable/rect_coral300_fill_20.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
-    <solid android:color="@color/white" />
+    <corners android:radius="20dp" />
+    <solid android:color="@color/coral300" />
 </shape>
